# ovh-cloud-manager

./: Cargo.toml  LICENSE  README.md
src/: client.rs  cloud.rs  errors.rs  handlers.rs  helpers.rs  lib.rs  macros.rs  main.rs  schemas.rs
src/cloud/: ai.rs  projects.rs
src/cloud/ai/: capabilities.rs  data.rs  jobs.rs
src/schemas/: ai.rs  common.rs
src/schemas/ai/: capabilities.rs  data.rs  jobs.rs
src/schemas/ai/jobs/: spec.rs  status.rs
tests/: client.rs  manager.rs
