[package]
name = "ovh-cloud-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha1 = "0.10.6"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
